Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/UncaughtOverflow.out
UncaughtOverflow.java:12:14: compiler.err.int.number.too.large: 100000000000
UncaughtOverflow.java:13:15: compiler.err.int.number.too.large: -2147483649
2 errors
